feat: Add license file and enhance internationalization with German, English, Spanish, and Italian translations